Fix social media icon overflow

--- a/css/main.sass
+++ b/css/main.sass
@@ -145,7 +145,7 @@ header.shrink
     display: inline-block
     margin:
         left: 5px
-        top: 3px
+        top: 4px
     li
         margin: -5px
     a
@@ -154,8 +154,8 @@ header.shrink
     img
         cursor: pointer
         margin-left: 2px
-        height: 30px
-        width: 30px
+        height: 26px
+        width: 26px
         -webkit-transition: .3s
         transition: .3s
         &:hover
